<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

   <androidx.appcompat.widget.SwitchCompat
       android:id="@+id/switchBackStack"
       android:layout_width="match_parent"
       android:text="@string/use_backstack"
       android:textSize="@dimen/text_size"
       android:layout_height="wrap_content"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButtonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/add"/>
    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/radioButtonReplace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/replace"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchBackAsRemove"
        android:layout_width="match_parent"
        android:text="@string/backasremove"
        android:textSize="@dimen/text_size"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchDeleteBeforeAdd"
        android:layout_width="match_parent"
        android:text="@string/deletebeforeadd"
        android:textSize="@dimen/text_size"
        android:layout_height="wrap_content"/>


</LinearLayout>